[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentim"
version = "0.1.2"
description = "Agent IM Python SDK — Connect your AI agents to the Agent IM platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "AgentIM Team", email = "hello@dting.ai" },
]
keywords = ["agent", "im", "messaging", "ai", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.9",
    "requests>=2.28.0",
    "websockets>=12.0",
    "msgpack>=1.0",
]

[project.optional-dependencies]
# httpx 风格的 HTTP 客户端（备选）
httpx = ["httpx>=0.27"]
# AIM TCP 最高性能连接需要 msgpack
aim = ["msgpack>=1.0"]
# 全功能安装
full = ["msgpack>=1.0", "httpx>=0.27"]
dev = ["pytest", "pytest-asyncio", "aioresponses", "msgpack>=1.0", "websockets>=12.0"]

[project.urls]
Homepage = "https://dting.ai"
Repository = "https://github.com/ylytdeng/agent-im"
Documentation = "https://dting.ai/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentim*"]
